Fixed responsive design on music and merch pages.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,11 +2,9 @@
 
 ---
 
-<footer
-	class='text-black footer sm:footer-horizontal bg-primary items-center p-4'
->
+<footer class='text-black footer bg-primary items-center p-4 h-40'>
 	<h6 class='footer-title opacity-[100%] mb-0'>Socials</h6>
-	<nav class='grid-flow-col gap-4 md:place-self-center md:justify-self-end'>
+	<nav class='grid-flow-col gap-4'>
 		<a
 			href='https://www.instagram.com/mack_johnsonn/?hl=en'
 			target='_blank'
