--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -14,8 +14,13 @@
 
 	<!-- Right: Hamburger Menu -->
 	<div class='ml-auto'>
+		<!-- Small Devices -->
 		<div class='dropdown dropdown-end'>
-			<button tabindex='0' role='button' class='btn btn-ghost lg:hidden'>
+			<button
+				tabindex='0'
+				role='button'
+				class='btn btn-ghost hover:bg-secondary lg:hidden'
+			>
 				<!-- Hamburger icon -->
 				<svg
 					xmlns='http://www.w3.org/2000/svg'
@@ -41,6 +46,7 @@
 				<li><a class='text-xl' href='/music'>music</a></li>
 			</ul>
 		</div>
+		<!-- Medium/Large Devices -->
 	</div>
 
 	<!-- End -->
