--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -4,7 +4,7 @@ import Baselayout from '../layouts/Baselayout.astro';
 
 <Baselayout
 	><div
-		class='card bg-primary w-96 shadow-sm min-h-[calc(100vh-5rem)] min-w-[100vw]'
+		class='card bg-primary w-96 shadow-sm min-h-[calc(100vh-15rem)] min-w-[100vw]'
 	>
 		<figure class='px-10 pt-10'>
 			<img
@@ -44,8 +44,8 @@ import Baselayout from '../layouts/Baselayout.astro';
 					></button
 				>
 			</div>
-			<div class='card-actions flex gap-3 mt-10'>
-				<!-- <button class='btn btn-ghost'>
+			<!-- <div class='card-actions flex gap-3 mt-10'>
+				<button class='btn btn-ghost'>
 					<a
 						href='https://www.instagram.com/mack_johnsonn/?hl=en'
 						target='_blank'
@@ -109,8 +109,8 @@ import Baselayout from '../layouts/Baselayout.astro';
 							></path></svg
 						></a
 					>
-				</button> -->
-			</div>
+				</button>
+			</div> -->
 		</div>
 	</div>
 </Baselayout>
