Added cart button to navbar and linked it to unfinished checkout page.

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -18,8 +18,12 @@
 				id nisi.
 			</p> -->
 			<div class='font-montserrat'>
-				<button class='btn btn-ghost'><a href='/merch'>shop</a></button>
-				<button class='btn btn-ghost'><a href='/music'>music</a></button>
+				<button class='btn btn-ghost hover:bg-accent'
+					><a href='/merch'>shop</a></button
+				>
+				<button class='btn btn-ghost hover:bg-accent'
+					><a href='/music'>music</a></button
+				>
 			</div>
 		</div>
 	</div>
