Working on creating responsive cart button on navbar.

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -12,9 +12,9 @@
 		>
 	</div>
 
-	<!-- Right: Cart | Hamburger Menu -->
-	<div class='flex items-center'>
-		<div class='m-2'>
+	<!-- Right - Small Screens: Cart | Hamburger Menu -->
+	<div class='flex items-center m-2 gap-2 md:hidden lg:hidden'>
+		<button role='button' class='btn btn-ghost hover:bg-secondary'>
 			<a href='/checkout'>
 				<svg
 					xmlns='http://www.w3.org/2000/svg'
@@ -31,40 +31,64 @@
 					></path>
 				</svg>
 			</a>
-		</div>
-		<div>
-			<div class='dropdown dropdown-end'>
-				<button
-					tabindex='0'
-					role='button'
-					class='btn btn-ghost hover:bg-secondary lg:hidden'
+		</button>
+		<div class='dropdown dropdown-end'>
+			<button
+				tabindex='0'
+				role='button'
+				class='btn btn-ghost hover:bg-secondary'
+			>
+				<!-- Hamburger icon -->
+				<svg
+					xmlns='http://www.w3.org/2000/svg'
+					class='h-5 w-5 stroke-black'
+					fill='none'
+					viewBox='0 0 24 24'
 				>
-					<!-- Hamburger icon -->
-					<svg
-						xmlns='http://www.w3.org/2000/svg'
-						class='h-5 w-5 stroke-black'
-						fill='none'
-						viewBox='0 0 24 24'
+					<path
+						stroke-linecap='round'
+						stroke-linejoin='round'
+						stroke-width='2'
+						d='M4 6h16M4 12h8m-8 6h16'
 					>
-						<path
-							stroke-linecap='round'
-							stroke-linejoin='round'
-							stroke-width='2'
-							d='M4 6h16M4 12h8m-8 6h16'
-						>
-						</path>
-					</svg>
-				</button>
-				<ul
-					tabindex='0'
-					class='menu menu-sm border-2 dropdown-content mt-3 mr-3 z-[1] p-2 shadow bg-accent rounded-box w-30 text-black text-base font-RockSalt'
-				>
-					<!-- Pages -->
-					<li><a class='text-xl' href='/merch'>merch</a></li>
-					<li><a class='text-xl' href='/music'>music</a></li>
-				</ul>
-			</div>
+					</path>
+				</svg>
+			</button>
+			<ul
+				tabindex='0'
+				class='menu menu-sm border-2 dropdown-content mt-3 mr-3 z-[1] p-2 shadow bg-accent rounded-box w-30 text-black text-base font-RockSalt'
+			>
+				<!-- Pages -->
+				<li><a class='text-xl' href='/merch'>merch</a></li>
+				<li><a class='text-xl' href='/music'>music</a></li>
+			</ul>
 		</div>
+	</div>
+	<!-- Right: Medium/Large Screens -->
+	<div class='flex items-center m-2 gap-2 md:hidden lg:hidden'></div>
+	<div class='hidden sm:block md:hidden lg:block items-center m-2 gap-2'>
+		<ul class='menu menu-horizontal px-1 text-base font-RockSalt'>
+			<li><a class='text-xl' href='/merch'>merch</a></li>
+			<li><a class='text-xl' href='/music'>music</a></li>
+		</ul>
+		<button role='button' class='btn btn-ghost hover:bg-secondary'>
+			<a href='/checkout'>
+				<svg
+					xmlns='http://www.w3.org/2000/svg'
+					fill='none'
+					viewBox='0 0 24 24'
+					stroke-width='1.5'
+					stroke='currentColor'
+					class='size-6'
+				>
+					<path
+						stroke-linecap='round'
+						stroke-linejoin='round'
+						d='M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z'
+					></path>
+				</svg>
+			</a>
+		</button>
 	</div>
 
 	<!-- End -->
