Small bug fixes with navbar and responsivness. Added but did not complete cart component and checkout endpoints .

--- a/src/pages/cart.astro
+++ b/src/pages/cart.astro
@@ -2,4 +2,4 @@
 import Baselayout from '../layouts/Baselayout.astro';
 ---
 
-<Baselayout> <div>Hello</div> </Baselayout>
+<Baselayout> <div>cart</div> </Baselayout>
