--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-
+import CartSummary from './CartSummary.astro';
 ---
 
 <div
@@ -13,31 +13,10 @@
 	</div>
 
 	<!-- Right - Small Screens: Cart | Hamburger Menu -->
-	<div class='flex items-center m-2 gap-2 md:hidden lg:hidden'>
-		<button role='button' class='btn btn-ghost hover:bg-secondary'>
-			<a href='/checkout'>
-				<svg
-					xmlns='http://www.w3.org/2000/svg'
-					fill='none'
-					viewBox='0 0 24 24'
-					stroke-width='1.5'
-					stroke='currentColor'
-					class='size-6'
-				>
-					<path
-						stroke-linecap='round'
-						stroke-linejoin='round'
-						d='M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z'
-					></path>
-				</svg>
-			</a>
-		</button>
+	<div class='flex items-center justify-end gap-2 md:hidden mr-1'>
+		<CartSummary />
 		<div class='dropdown dropdown-end'>
-			<button
-				tabindex='0'
-				role='button'
-				class='btn btn-ghost hover:bg-secondary'
-			>
+			<button tabindex='0' role='button' class='btn btn-ghost hover:bg-accent'>
 				<!-- Hamburger icon -->
 				<svg
 					xmlns='http://www.w3.org/2000/svg'
@@ -65,30 +44,22 @@
 		</div>
 	</div>
 	<!-- Right: Medium/Large Screens -->
-	<div class='flex items-center m-2 gap-2 md:hidden lg:hidden'></div>
-	<div class='hidden sm:block md:hidden lg:block items-center m-2 gap-2'>
-		<ul class='menu menu-horizontal px-1 text-base font-RockSalt'>
-			<li><a class='text-xl' href='/merch'>merch</a></li>
-			<li><a class='text-xl' href='/music'>music</a></li>
-		</ul>
-		<button role='button' class='btn btn-ghost hover:bg-secondary'>
-			<a href='/checkout'>
-				<svg
-					xmlns='http://www.w3.org/2000/svg'
-					fill='none'
-					viewBox='0 0 24 24'
-					stroke-width='1.5'
-					stroke='currentColor'
-					class='size-6'
+	<div class='hidden sm:block md:hidden lg:block m-2'>
+		<ul class='menu menu-horizontal gap-4 px-1 text-base font-RockSalt'>
+			<li>
+				<button class='btn btn-ghost hover:bg-accent'
+					><a class='text-xl' href='/merch'>merch</a></button
 				>
-					<path
-						stroke-linecap='round'
-						stroke-linejoin='round'
-						d='M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z'
-					></path>
-				</svg>
-			</a>
-		</button>
+			</li>
+			<li>
+				<button class='btn btn-ghost hover:bg-accent'
+					><a class='text-xl' href='/music'>music</a></button
+				>
+			</li>
+			<li>
+				<CartSummary />
+			</li>
+		</ul>
 	</div>
 
 	<!-- End -->
