--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-
+import VideoBackground from './VideoBackground.astro';
 ---
 
 <div
@@ -9,22 +9,22 @@
 	<div class='hero-overlay'></div>
 	<div class='hero-content text-neutral-content text-center'>
 		<div class='max-w-md'>
-			<h1 class='mb-5 font-reenie-beanie-regular text-6xl'>
+			<!-- <h1 class='mb-5 font-reenie-beanie-regular text-6xl'>
 				vol 1 <br /> coming soon
-			</h1>
+			</h1> -->
 			<!-- <p class='mb-5'>
 				Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
 				excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a
 				id nisi.
 			</p> -->
-			<div class='font-montserrat'>
+			<!-- <div class='font-montserrat'>
 				<button class='btn btn-ghost hover:bg-accent'
 					><a href='/merch'>shop</a></button
 				>
 				<button class='btn btn-ghost hover:bg-accent'
 					><a href='/music'>music</a></button
 				>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </div>
