--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
 import Baselayout from '../layouts/Baselayout.astro';
 import Hero from '../components/Hero.astro';
+import VideoBackground from '../components/VideoBackground.astro';
 ---
 
 <Baselayout>
-	<Hero />
+	<VideoBackground />
 </Baselayout>
