--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,3 +53,15 @@
 	background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23cccccc' fill-opacity='0.5'%3E%3Ccircle cx='3' cy='3' r='2'/%3E%3Ccircle cx='30' cy='10' r='1.5'/%3E%3Ccircle cx='50' cy='25' r='1.8'/%3E%3Ccircle cx='15' cy='40' r='2'/%3E%3Ccircle cx='45' cy='50' r='1.2'/%3E%3C/g%3E%3C/svg%3E");
 	background-size: 20px 20px; /* controls scale */
 }
+
+@media (max-width: 768px) {
+	html,
+	body {
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
+	html::-webkit-scrollbar,
+	body::-webkit-scrollbar {
+		display: none; /* Chrome, Safari, Opera */
+	}
+}
