Fixed path shape checking, fixed music page layout on desktop. Music page buttons now span entire buttton div.

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,9 +3,9 @@ import CartSummary from './CartSummary.astro';
 
 const { pathname } = Astro.url;
 
-const isIndex = ['/'].includes(pathname);
-const isMerch = ['/merch'].includes(pathname);
-const isMusic = ['/music'].includes(pathname);
+const isIndex = pathname === '/';
+const isMerch = pathname.startsWith('/merch');
+const isMusic = pathname.startsWith('/music');
 
 // Small Screens
 const mainDiv = isIndex
