--- a/src/layouts/Baselayout.astro
+++ b/src/layouts/Baselayout.astro
@@ -3,6 +3,7 @@ import '../styles/global.css';
 import Navbar from '../components/Navbar.astro';
 import Footer from '../components/Footer.astro';
 import Analytics from '@vercel/analytics/astro';
+import SpeedInsights from '@vercel/speed-insights/astro';
 
 const { pathname } = Astro.url;
 
@@ -24,6 +25,7 @@ const hideNavAndFooter = ['/'].includes(pathname);
 		<meta name='generator' content={Astro.generator} />
 		<title>mack johnson</title>
 		<Analytics />
+		<SpeedInsights />
 	</head>
 	<body>
 		<!-- {!hideNavAndFooter && <Navbar />} -->
