changed music page buttons and fixed merch page size

--- a/src/components/CartSummary.astro
+++ b/src/components/CartSummary.astro
@@ -11,7 +11,7 @@ const buttonClass = isIndex
 ---
 
 <button role='button' class={buttonClass}>
-	<a href='/checkout'>
+	<a href='/cart'>
 		<svg
 			xmlns='http://www.w3.org/2000/svg'
 			fill='none'
