--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,8 +4,8 @@
 
 <footer class='footer gap-0 bg-primary items-center p-4 h-40 text-black'>
 	<div class='md:w-sm'>
-		<h6 class='footer-title opacity-[100%] mb-0 md:mb-5'>Socials</h6>
-		<nav class='flex justify-around gap-4 w-[100%]'>
+		<h6 class='footer-title opacity-[100%] mb-8 md:mb-5'>Socials</h6>
+		<nav class='flex w-full gap-10 md:gap-20'>
 			<a
 				href='https://www.instagram.com/mack_johnsonn/?hl=en'
 				target='_blank'
@@ -56,7 +56,7 @@
 			>
 
 			<a
-				href='https://www.youtube.com/channel/UCW1vkF5TWOMomhsj-uoet5g'
+				href='https://www.youtube.com/@mack_johnsonn'
 				target='_blank'
 				rel='noopener noreferrer'
 				><svg
