--- a/src/components/ImageCarousel.astro
+++ b/src/components/ImageCarousel.astro
@@ -33,13 +33,13 @@ const { idSuffix, img1, img2 } = Astro.props;
 		class='pointer-events-none absolute inset-0 flex items-center justify-between px-4'
 	>
 		<button
-			class='pointer-events-auto hover:bg-accent btn-ghost btn btn-circle -ml-8 mb-15'
+			class='pointer-events-auto hover:bg-red-500 btn-ghost btn btn-circle -ml-8 mb-15'
 			type='button'
 			aria-label='Previous slide'
 			data-prev>❮</button
 		>
 		<button
-			class='pointer-events-auto hover:bg-accent btn-ghost btn btn-circle -mr-8 mb-15'
+			class='pointer-events-auto hover:bg-red-500 btn-ghost btn btn-circle -mr-8 mb-15'
 			type='button'
 			aria-label='Next slide'
 			data-next>❯</button
