--- a/src/components/VideoBackground.astro
+++ b/src/components/VideoBackground.astro
@@ -14,9 +14,11 @@
 		Your browser does not support the video tag.
 	</video>
 	<div
-		class='relative z-10 flex flex-col gap-10 items-center justify-center min-h-[calc(100vh-10rem)] text-white'
+		class='fixed inset-0 z-10 flex flex-col gap-10 items-center justify-center text-white'
 	>
-		<img class='p-10' src='/logo_red.png' />
+		<a href='/music'>
+			<img class='p-10' src='/logo_red.png' />
+		</a>
 		<!-- <div>
 			<ul
 				class='menu menu-horizontal gap-6 px-1 text-base font-RockSalt text-red-500'
