--- a/src/pages/merch.astro
+++ b/src/pages/merch.astro
@@ -6,10 +6,10 @@ import ItemCard from '../components/ItemCard.astro';
 <Baselayout>
 	<!-- Item Container -->
 	<div
-		class='py-15 bg-primary flex flex-wrap justify-around items-center align-middle gap-10 md:gap-0 md:px-20 md:max-h-[calc(100vh-15rem)]'
+		class='py-15 bg-primary flex flex-wrap justify-around items-center align-middle gap-10 md:gap-0 md:px-20 md:min-h-[calc(100vh-15rem)]'
 	>
 		<ItemCard
-			title='item.1'
+			title='Vol. 1 Hoodie'
 			idSuffix='card-1'
 			price='60'
 			img1='/black_hoodie_front.png'
@@ -17,7 +17,7 @@ import ItemCard from '../components/ItemCard.astro';
 			alt='Black hoodie'
 		/>
 		<ItemCard
-			title='item.2'
+			title='Dreamchaser Tee'
 			idSuffix='card-2'
 			price='60'
 			img1='/white_tee_front.png'
