--- a/src/pages/music.astro
+++ b/src/pages/music.astro
@@ -17,7 +17,7 @@ import Baselayout from '../layouts/Baselayout.astro';
 			<!--  -->
 			<figure class='px-10 pt-10'>
 				<img
-					src='/tracklist.png'
+					src='/album_cover_final.png'
 					alt='Mack Johnsons profile picture'
 					class='w-75 h-75 md:w-100 md:h-100'
 				/>
