--- a/src/layouts/Baselayout.astro
+++ b/src/layouts/Baselayout.astro
@@ -13,7 +13,7 @@ const hideNavAndFooter = ['/'].includes(pathname);
 <html lang='en' data-theme='mytheme'>
 	<head>
 		<meta charset='utf-8' />
-		<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+		<link rel='icon' type='image/svg+xml' href='/favicon.png' />
 		<link rel='preconnect' href='https://fonts.googleapis.com' />
 		<link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
 		<link
